[package]
name = "arbvis"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fast_hilbert = "2.0"
image = "0.25"
imageproc = "0.25"
indicatif = "0.17"
memmap2 = "0.9"
rayon = "1"
show-image = {version = "0.14", features = ["image"]}